handlers added and environment setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
 	},
 	"rules": {
 		"no-console": 0,
+		"no-unused-vars": 1,
+		"no-param-reassign": 1,
 		"indent": 0,
 		"linebreak-style": 0,
 		"prettier/prettier": [
